--- a/app/src/main/res/layout/quote_item_view.xml
+++ b/app/src/main/res/layout/quote_item_view.xml
@@ -1,53 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:src="@drawable/dash"
-        android:layerType="software" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/quote_vote_up"
-        style="@style/TextView.Primary.Bold"
-        android:text="+"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layerType="software"
+            android:src="@drawable/dash" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/quote_id"
-        style="@style/TextView.Primary.Bold"
-        android:layout_toEndOf="@+id/quote_vote_up"
-        android:text="id"/>
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
+        android:minHeight="0dp">
 
-    <TextView
-        android:id="@+id/quote_vote_down"
-        style="@style/TextView.Primary.Bold"
-        android:layout_toEndOf="@+id/quote_id"
-        android:text="-"/>
+        <TextView
+            android:id="@+id/quote_vote_up"
+            style="@style/TextView.Primary.Bold"
+            android:layout_height="26dp"
+            android:layout_marginStart="4dp"
+            android:text="+"
+            android:textSize="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/quote_rating"
-        style="@style/TextView.Secondary"
-        android:layout_marginStart="@dimen/text_small_margin"
-        android:layout_toEndOf="@+id/quote_vote_down"
-        android:text="rating"/>
+        <TextView
+            android:id="@+id/quote_rating"
+            style="@style/TextView.Secondary"
+            android:layout_width="wrap_content"
+            android:layout_height="26dp"
+            android:layout_marginStart="4dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
+            android:text="rating"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/quote_vote_up"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/quote_date"
-        style="@style/TextView.Secondary"
-        android:layout_toEndOf="@+id/quote_rating"
-        android:layout_marginStart="@dimen/text_small_margin"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:text="date"/>
+        <TextView
+            android:id="@+id/quote_vote_down"
+            style="@style/TextView.Primary.Bold"
+            android:layout_height="26dp"
+            android:layout_marginStart="4dp"
+            android:text="-"
+            android:textAlignment="center"
+            android:textSize="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/quote_rating"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/quote_text"
-        style="@style/TextView.Primary"
-        android:layout_below="@id/quote_date"
-        android:text="text"/>
+        <TextView
+            android:id="@+id/quote_vote_bayan"
+            style="@style/TextView.Primary.Bold"
+            android:layout_height="26dp"
+            android:layout_marginStart="10dp"
+            android:text="[:||||:]"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/quote_vote_down"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/quote_date"
+            style="@style/TextView.Secondary"
+            android:layout_height="26dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="date"
+            android:textAlignment="textEnd"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/quote_id"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/quote_id"
+            style="@style/TextView.Primary.Bold"
+            android:layout_height="26dp"
+            android:paddingRight="10dp"
+            android:text="id"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/quote_vote_bayan"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="60dp">
+
+        <TextView
+            android:id="@+id/quote_text"
+            style="@style/TextView.Primary"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:text="text" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
